--- a/cmd/web/resource/template/components/server.html
+++ b/cmd/web/resource/template/components/server.html
@@ -1,15 +1,15 @@
-{{define "components/addOrEditServer"}}
-<div class="modal fade" id="modalAddOrEditServer" tabindex="-1" role="dialog" aria-hidden="true">
+{{define "components/server"}}
+<div class="modal fade" id="modalServer" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">管理服务器</h5>
+                <h5 class="modal-title">服务器</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form id="formEditServer" onsubmit="return editServerHandler()">
+                <form id="formEditServer" onsubmit="return serverHandler()">
                     <input id="inputID" name="id" type="hidden">
                     <div class="form-group">
                         <label for="inputName" class="col-form-label">备注名：</label>
@@ -43,7 +43,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-                <button id="btnSubmit" onclick="saveForm('#formEditServer')" class="btn btn-primary">管理</button>
+                <button id="btnSubmit" onclick="saveForm('#formEditServer')" class="btn btn-primary">添加</button>
             </div>
         </div>
     </div>
