--- a/cmd/web/resource/template/components/webhook_list.html
+++ b/cmd/web/resource/template/components/webhook_list.html
@@ -11,7 +11,7 @@
                             Webhook 管理
                         </h5>
                         <div>
-                            <button class="btn btn-sm btn-secondary pr-1 pl-2" data-method="post" data-toggle="modal"
+                            <button class="btn btn-sm btn-secondary pr-1 pl-2" data-method="POST" data-toggle="modal"
                                 data-target="#modalWebhook" data-pipeline="{{$p.ID}}">
                                 <i class="octicon octicon-plus"></i>
                             </button>
@@ -39,11 +39,11 @@
                                     <td>{{$w.Enable}}</td>
                                     <td style="min-width: 130px" data-webhook="{{$w|JSON}}">
                                         <button class="btn btn-sm btn-secondary pr-1 pl-2" data-toggle="modal"
-                                            data-target="#modalWebhook" data-method="patch">
+                                            data-target="#modalWebhook" data-method="PATCH">
                                             <i class="octicon octicon-pencil"></i>
                                         </button>
                                         <button class="btn btn-sm btn-secondary pr-1 pl-2" data-toggle="modal"
-                                            data-target="#modalWebhook" data-method="delete">
+                                            data-target="#modalWebhook" data-method="DELETE">
                                             <i class=" octicon octicon-trashcan"></i>
                                         </button>
                                     </td>
