--- a/cmd/web/resource/template/components/webhook.html
+++ b/cmd/web/resource/template/components/webhook.html
@@ -17,8 +17,7 @@
                     可替换字段：<b>URL</b>、<b>Body</b> 的内容均能替换，如果是 GET 请求请把 query 参数以 JSON key value 格式放到 body 字段里面，方便
                     URLEncode
                     <br>
-                    Body 的格式是 <code>{"key":"value"}</code> 对应的是 Go 里面 <code>map[string]string</code> 的序列化。填写完可以到 <a
-                        href="https://www.bejson.com/" target="_blank">JSON 校验工具</a> 校验一下是否正确。
+                    填入 Body 的数据可以到 <a href="https://www.bejson.com/" target="_blank">JSON 校验工具</a> 校验一下是否正确。
                 </div>
                 <form id="formWebhook" onsubmit="return webhookHandler()">
                     <input id="inputID" type="hidden" name="id">
