replace unreachable cdn

--- a/cmd/web/resource/template/common/header.html
+++ b/cmd/web/resource/template/common/header.html
@@ -9,8 +9,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="shortcut icon" type="image/png" href="/static/image/logo.png">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
     <link href="https://cdn.bootcss.com/octicons/4.4.0/font/octicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/nocd.css">
 
