improve view running log

--- a/cmd/web/resource/template/admin/running.html
+++ b/cmd/web/resource/template/admin/running.html
@@ -31,7 +31,7 @@
                         {{else if eq $l.Status 2}}
                             class="btn btn-dark btn-sm">服务器错误</button>
                         {{else if eq $l.Status 3}}
-                            class="btn btn-danger btn-sm">脚本错误</button>
+                            class="btn btn-danger btn-sm">执行错误</button>
                         {{else if eq $l.Status 4}}
                             class="btn btn-primary btn-sm">正在运行</button>
                         {{else if eq $l.Status 5}}
