--- a/cmd/web/resource/template/repository/index.html
+++ b/cmd/web/resource/template/repository/index.html
@@ -177,7 +177,7 @@
                                     {{else if eq $log.Status 2}}
                                     class="btn btn-dark btn-sm">服务器错误</a>
                                     {{else if eq $log.Status 3}}
-                                    class="btn btn-danger btn-sm">脚本错误</a>
+                                    class="btn btn-danger btn-sm">执行错误</a>
                                     {{else if eq $log.Status 4}}
                                     class="btn btn-primary btn-sm">正在运行</a>
                                     {{else if eq $log.Status 5}}
