--- a/cmd/web/resource/template/common/footer.html
+++ b/cmd/web/resource/template/common/footer.html
@@ -9,7 +9,8 @@
         <div class="row">
             <div class="col-12 col-md">
                 <img class="mb-2" src="/static/image/logo.png" alt="" width="24" height="24">
-                <small class="d-block mb-3 text-muted">&copy; 2017-2020 <a class="text-muted" href="https://github.com/naiba/nocd" target="_blank">NoCD</a></small>
+                <small class="d-block mb-3 text-muted">&copy; 2017-2020 <a class="text-muted"
+                        href="https://github.com/naiba/nocd" target="_blank">NoCD</a></small>
             </div>
             <div class="col-6 col-md">
                 <h5>Referrence</h5>
