--- a/cmd/web/resource/template/common/footer.html
+++ b/cmd/web/resource/template/common/footer.html
@@ -41,7 +41,7 @@
 <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.0/dist/clipboard.min.js"></script>
 <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/static/js/nocd.js"></script>
+<script type="text/javascript" src="/static/js/nocd.js?v20200824"></script>
 {{if .GA_id}}
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{.GA_id}}"></script>
