--- a/cmd/web/resource/template/common/header.html
+++ b/cmd/web/resource/template/common/header.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="/static/image/logo.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
     <link href="https://cdn.bootcss.com/octicons/4.4.0/font/octicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/static/css/nocd.css">
+    <link rel="stylesheet" href="/static/css/nocd.css?v20200824">
 
     <title>NoCD —— Go 开源持续交付系统</title>
 </head>
