--- a/cmd/web/resource/template/pipelog/index.html
+++ b/cmd/web/resource/template/pipelog/index.html
@@ -7,6 +7,7 @@
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">日志</th>
+                    <th scope="col">所属项目</th>
                     <th scope="col">所属流程</th>
                     <th scope="col">状态</th>
                     <th scope="col">触发时间</th>
@@ -19,6 +20,7 @@
                 <tr>
                     <th scope="row">{{$l.ID}}</th>
                     <td><a class="btn btn-sm btn-secondary" href="/pipelog/{{$l.ID}}">Log</a></td>
+                    <td>{{$l.Pipeline.Repository.Name}}</td>
                     <td>{{$l.Pipeline.Name}}</td>
                     <td>
                         <button{{if eq $l.Status 1}} class="btn btn-success btn-sm">部署成功
